# NSU-C-Algorithms-1st-Course

lab0/src/: main.c
lab1-0/src/: main.c
lab1-1/src/: main.c
lab2/src/: main.c
lab3-0/src/: main.c
lab3-1/src/: main.c
lab4/src/: main.c
lab5/: CMakeLists.txt
lab5/src/: codingHeap.c  codingHeap.h  codingTable.c  codingTable.h  decodingPart.c  decodingPart.h  encodingPart.c  encodingPart.h  main.c
lab6/: CMakeLists.txt
lab6/src/: main.c  tree.c  tree.h
lab7/: CMakeLists.txt
lab7/src/: graph.c  graph.h  main.c  node.c  node.h
lab8-0/: CMakeLists.txt
lab8-0/src/: edge.c  edge.h  main.c  subset.c  subset.h
lab8-1/: CMakeLists.txt
lab8-1/src/: graph.c  graph.h  main.c  priorityQueue.c  priorityQueue.h
lab9/: todo.txt
lab9/src/: main.c
